--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Charles Vanchieri
 subtitle: Portfolio
 email: CVanchieri@Gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-baseurl: "/CVanchieri" # the subpath of your site, e.g. /blog
+baseurl: "/portfolio" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
 street_address: 
