--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ subtitle: Portfolio
 email: CVanchieri@Gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
 baseurl: "/portfolio" # the subpath of your site, e.g. /blog
-url: # the base hostname & protocol for your site
+url: https://c6feels.github.io/ # the base hostname & protocol for your site
 author:
 street_address: 
 city: Randwick
