--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Charles Vanchieri
 subtitle: Portfolio
 email: CVanchieri@Gmail.com
-description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
+description: This is all about Charles Vanchieri.
 baseurl: "/portfolio" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
