--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Charles Vanchieri
 subtitle: Portfolio
 email: CVanchieri@Gmail.com
 description: This is all about Charles Vanchieri.
-baseurl: "/portfolio" # the subpath of your site, e.g. /blog
+baseurl: #" " # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
 street_address: 
