--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Charles Vanchieri
 subtitle: Portfolio
 email: CVanchieri@Gmail.com
-description: This is all about Charles Vanchieri.
+description: This is all about ME.
 baseurl: #" " # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
