--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ socials:
   Google-Plus:
   Instagram: https://www.instagram.com/cvanchieri6
   LinkedIn: https://www.linkedin.com/in/cvanchieri6
-  Twitter: https://twitter.com/C6feels
+  Twitter: https://twitter.com/CVanchieri6
   Facebook:
   Slack:
 
