--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ subtitle: Portfolio
 email: CVanchieri@Gmail.com
 description: This is all about ME.
 baseurl: #" " # the subpath of your site, e.g. /blog
-url: # the base hostname & protocol for your site
+url: CVanchieri/Portfolio
 author:
 street_address: 
 city: Randwick
