--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Charles Vanchieri
 subtitle: Portfolio
 email: CVanchieri@Gmail.com
 description: This is all about ME.
-baseurl: /Portfolio
-url: CVanchieri/Portfolio
+baseurl: 
+url: 
 author:
 street_address: 
 city: Randwick
